--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,6 +23,13 @@
 	outline: 1px solid #007bff;
 	color: #007bff;
 }
+blockquote {
+	display: block;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 40px;
+	margin-inline-end: 40px;
+}
 body,
 html {
 	color: #666666;
@@ -400,6 +407,7 @@ html {
 }
 .bg-light {
 	overflow: auto;
+	background: #e6eaed !important;
 }
 .blue-title {
 	color: #007bff;
@@ -493,26 +501,59 @@ label {
 	overflow: auto;
 	display: inherit;
 }
+.bold {
+	font-weight: bold;
+}
+.ls-1 {
+	letter-spacing: 1px;
+}
+.ls-7 {
+	letter-spacing: 0.7px;
+}
+.color-yellow {
+	color: #ffcc01;
+}
+.color-white {
+	color: white;
+}
 .half-banner {
-	height: 50%;
+	height: 60%;
 }
 .full-banner {
 	height: 100%;
 }
+.full-banner .info-bottom {
+	position: absolute;
+	bottom: 10px;
+	width: 100%;
+	z-index: 3;
+}
+.border-yellow {
+	border: 2px solid #ffcc01;
+}
+.full-banner.detail::after {
+	content: "";
+	width: 100%;
+	height: 70%;
+	position: absolute;
+	bottom: 0;
+	background: linear-gradient(to top, rgba(30, 30, 30, 1), rgba(30, 30, 30, 0));
+}
 .full-banner .layer,
 .half-banner .layer {
+	background-position: center !important;
 	background: rgba(0, 0, 0, 0.4);
 }
 .full-banner,
 .half-banner {
 	width: 100%;
 	background-attachment: fixed !important;
-	background-position: center !important;
 	background-size: cover !important;
 	background-repeat: no-repeat !important;
 	position: relative;
 }
 .text-banner {
+	z-index: 3;
 	position: relative;
 	bottom: -50%;
 	transform: translateY(-50%);
@@ -520,6 +561,9 @@ label {
 	-o-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
 	color: white;
+}
+.text-banner .btn-circle {
+	border-radius: 50px;
 }
 .text-banner h1 {
 	font-size: 50px;
@@ -531,6 +575,8 @@ label {
 }
 .half-banner .icons {
 	margin-top: 20px;
+}
+.dropdown-menu {
 }
 .half-banner .icons span::before {
 	font-size: 50px;
@@ -551,4 +597,103 @@ label {
 	position: relative;
 	bottom: -50%;
 	transform: translateY(-50%);
+}
+.form-filter input,
+.form-filter button {
+	font-size: 15px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+.form-filter button {
+	letter-spacing: 0.5px;
+}
+.form-filter .dropdown-toggle {
+	border-left: 1px solid #ddd;
+	border-top: 1px solid #ced4da;
+	border-radius: 0px;
+}
+#accordion .card {
+	margin-bottom: 5px;
+}
+#accordion .card-body {
+	font-weight: bold;
+	font-size: 15px;
+	letter-spacing: 0.8px;
+}
+#accordion .card .card-header .btn-link {
+	width: 100%;
+	text-align: left;
+	display: block;
+	padding: 0.75rem 1.25rem;
+	font-size: 17px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: bold;
+	line-height: 200%;
+}
+#accordion .card .card-header .btn-link:hover,
+#accordion .card .card-header .btn-link:focus {
+	text-decoration: none;
+}
+#accordion .card .card-header .btn-link .fa {
+	float: right;
+	background: white;
+	padding: 10px 12px;
+	font-size: 20px;
+	border-radius: 100%;
+}
+#accordion .card .card-header {
+	padding: 0px;
+}
+#accordion [data-toggle="collapse"].collapsed {
+	background: #e6eaed;
+	color: #666666;
+}
+#accordion [data-toggle="collapse"] {
+	background: #007bff;
+	color: white;
+}
+#accordion [data-toggle="collapse"] .fa:before {
+	color: #007bff;
+	content: "\f139";
+}
+
+#accordion [data-toggle="collapse"].collapsed .fa:before {
+	content: "\f13a";
+}
+.box-white {
+	background: white;
+	overflow: auto;
+	padding: 20px;
+	border-radius: 5px;
+}
+.nav-tabs .nav-link.active {
+	background: transparent;
+	border-bottom: 2px solid #007bff;
+	color: #007bff;
+}
+.nav-tabs .nav-link {
+	border: none;
+	color: #666666;
+	font-weight: bold;
+	border-bottom: 2px solid transparent;
+}
+.border.radius {
+	border: 1px solid #ddd;
+	border-radius: 7px;
+}
+.share .item {
+	display: inline-block;
+	margin: 5px 15px;
+	text-align: center;
+}
+.share .item a {
+	color: #4d4d4d;
+	font-weight: bold;
+	letter-spacing: 0.8px;
+}
+.share .item img {
+	display: block;
+	margin: auto;
+	margin-bottom: 10px;
 }
