--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -120,10 +120,11 @@ html {
 	background: rgba(0, 0, 0, 0.1);
 }
 .main-nav .navbar-nav li a {
-	color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 1);
 	text-transform: uppercase;
 	font-size: 13px;
 	letter-spacing: 1px;
+	font-weight: bold;
 }
 .main-nav .navbar-nav li a:hover {
 	color: #007bff;
@@ -135,7 +136,7 @@ html {
 	display: none;
 }
 .section {
-	margin-top: 100vh;
+	margin-top: 100vh !important;
 }
 .title {
 	text-transform: uppercase;
@@ -164,6 +165,7 @@ html {
 	text-align: center;
 	font-weight: bold;
 	letter-spacing: 1px;
+	font-size: 19px;
 }
 .btn-bold {
 	text-transform: uppercase;
@@ -262,7 +264,7 @@ html {
 	overflow: hidden;
 }
 .destinations .col-md-6 .destination {
-	height: 350px;
+	height: 400px;
 }
 .destinations.top .destination {
 	height: 110px !important;
@@ -273,7 +275,7 @@ html {
 .parallax {
 	background-image: url("../images/banner/banner.jpg");
 
-	min-height: 400px;
+	min-height: 60%;
 
 	background-attachment: fixed;
 	background-position: center;
@@ -285,7 +287,7 @@ html {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.4);
+	background: rgba(0, 0, 0, 0.6);
 	left: 0;
 	top: 0;
 	text-align: center;
@@ -310,7 +312,7 @@ html {
 .parallax .layer .text p {
 	opacity: 0.7;
 	margin: 20px 0px;
-	font-size: 14px;
+	font-size: 17px;
 	letter-spacing: 1px;
 }
 .package {
